--- a/css/style.scss
+++ b/css/style.scss
@@ -146,7 +146,7 @@ $font_Godo_B: "Godo_B";
         }
       }
       .custom_card {
-        width: 30%; height: 92.26%;
+        width: 30%; height: 92.26%; font-family: 'Noto Sans KR';
         position: absolute; top: 15%; left: 7%; z-index: 30; line-height: 1.5;
         opacity: 0; visibility: hidden; transition-delay: .1s;
         #custom_title {
@@ -155,7 +155,7 @@ $font_Godo_B: "Godo_B";
           // 폰트 40 픽셀
         }
         #custom_text {
-          font-size: 1.88rem; padding-top: 1em;
+          font-size: 2rem; padding-top: 1em; 
           // 폰트 30 픽셀
         }
         #custom_link {
@@ -217,7 +217,7 @@ $font_Godo_B: "Godo_B";
                   box-shadow: 0 0 0 1px #d8dee4; transition: all 0.2s ease;
                   .benefit_name {
                     font-size: .9375rem; font-weight: 500; display: inline-block;
-                    width: 8.33vw;
+                    width: 8.33vw; text-align: left;
                   }
                 }
                 input {
@@ -302,25 +302,39 @@ $font_Godo_B: "Godo_B";
           .credit_top3 {
             width: 52%;
             ul {
-              display: flex; justify-content: space-between;
+              display: flex; justify-content: space-between; margin-top: 10%;
               li {
                 width: 32%; border: 1px solid #d8dee4; border-radius: 5px;
                 transition: all .2s ease-in-out;
                 a {color: #111;}
-                p {font-size: 1.25rem; font-weight: 700; margin: .5em 0 0 .75em;}
+                p {font-size: 1.5rem; font-weight: 700; margin: .5em 0 0 .75em;}
                 .photo {
                   width: 100%; margin: 10% 5%;
                   img {width: 90%; padding: 0% 10%;}
                 }
-                .box {
-                  h4 {font-size: 1.125rem; font-weight: 500; text-align: center;}
-                }
-                .tag {
-                  margin: .625em 0; text-align: center; color: #666;
-                }
+                .box {                  
+                  h4 {font-size: 1.125rem; font-weight: 700; text-align: center;}
+                  .text {
+                    font-size: 1rem; text-align: center; font-weight: 400; line-height: 1.2;
+                    margin: 10% 0;
+                  }
+                  .tag {
+                    margin: .625em 0; text-align: center; color: #666;
+                  }
+                }                
                 &:hover {
                   background: #0078ff;
                   .tag {color: #fff;}
+                }
+              }
+              li:first-child {
+                .box {
+                  p {margin-top: 19%;}
+                }
+              }
+              li:nth-child(2) {
+                .box {
+                  p {margin-top: 19%;}
                 }
               }
             }
@@ -339,7 +353,10 @@ $font_Godo_B: "Godo_B";
                 }
                 .box {
                   padding: .8% 0;
-                  h4 {font-size: 1rem; font-weight: 600; letter-spacing: .5px;}
+                  h4 {
+                    font-size: 1rem; font-weight: 600; letter-spacing: .5px;
+                    span {font-weight: bolder;}
+                  }
                   p {font-size: .875rem; margin: 1em 0 .3125em;}
                   .tag {
                     color: #666; font-size: .875rem;
@@ -348,8 +365,7 @@ $font_Godo_B: "Godo_B";
                 &:hover {
                   border-color: #d8dee4;
                 }
-              }
-              
+              }              
             }
           }
           .credit_close {
@@ -373,25 +389,39 @@ $font_Godo_B: "Godo_B";
           .check_top3 {
             width: 52%;
             ul {
-              display: flex; justify-content: space-between;
+              display: flex; justify-content: space-between; margin-top: 10%;
               li {
                 width: 32%; border: 1px solid #d8dee4; border-radius: 5px;
                 transition: all .2s ease-in-out;
                 a {color: #111;}
-                p {font-size: 1.25rem; font-weight: 700; margin: .5em 0 0 .75em;}
+                p {font-size: 1.5rem; font-weight: 700; margin: .5em 0 0 .75em;}
                 .photo {
                   width: 100%; margin: 10% 5%;
                   img {width: 90%; padding: 0% 10%;}
                 }
                 .box {
                   h4 {font-size: 1.125rem; font-weight: 500; text-align: center;}
-                }
-                .tag {
-                  margin: .625em 0; text-align: center; color: #666;
-                }
+                  .text {
+                    font-size: 1rem; text-align: center; font-weight: 400; line-height: 1.2;
+                    margin: 10% 0;
+                  }
+                  .tag {
+                    margin: .625em 0; text-align: center; color: #666;
+                  }
+                }                
                 &:hover {
                   background: #0078ff;
                   .tag {color: #fff;}
+                }
+              }
+              li:first-child {
+                .box {
+                  p {margin-top: 19%;}
+                }
+              }
+              li:nth-child(2) {
+                .box {
+                  p {margin-top: 19%;}
                 }
               }
             }
@@ -410,7 +440,10 @@ $font_Godo_B: "Godo_B";
                 }
                 .box {
                   padding: .8% 0;
-                  h4 {font-size: 1rem; font-weight: 600; letter-spacing: .5px;}
+                  h4 {
+                    font-size: 1rem; font-weight: 600; letter-spacing: .5px;
+                    span {font-weight: bolder;}
+                  }
                   p {font-size: .875rem; margin: 1em 0 .3125em;}
                   .tag {
                     color: #666; font-size: .875rem;
